- Position and Positions for numerical sets
- Added IsAssociatedNumericalSetOfNumericalSemigroup
- Added AsNumericalSemigroup for numerical sets 
- Added difference between numerical semigroups and ideals of numerical semigroups and vice versa
- Added Position for ideals of numerical semigroups and numerical semigroups
- Union of numerical semigroups is a numerical set
1.3.1 -> 1.4.0
- Added NumericalSemigroupsWithFrobeniusNumberPC
- Added NumericalSemigroupsWithGenusPC
- Added NumericalSemigroupsWithMaxPrimitivePC
- Added databases (semigroups with fixed Frobenius number (up to 32, 1.5MB); semigroups with fixed genus (up to 22, 1.9MB); semigroups with fixed maximum primitive (up to 32, 2.6 MB))
- Added NumericalSemigroupsWithMaxPrimitive
- Changes in DotSplash due to viz.js reallocation
- Added FiniteComplementIdealExtension
- Functions related to Ratlif-Rush closure corrected (intersecting with the semigroup was needed as reported by M. D'Anna and F. Strazzanti)
- Added sum of two numerical semigroups
- Bibliography update 
- Priority arguments added to membership methods for numerical semigroups

#======
1.3.0 -> 1.3.1
- LegendrianGenericNumericalSemigroup
- AperyList now works for an ideal, and computes the Apéry list wrt the multiplicity of its ambient numerical semigroup
- Added SpecialArfGaps, IsArfIrreducible, ArfOverSemigroups, DecomposeIntoArfIrreducibles 
- Added DenumerantIdeal
- Remove IsRectangularTable as filter 
- Added IsUniversallyFreeNumericalSemigroup
- BinomialIdealOfNumericalSemigroup

#======
1.2.2 -> 1.3.0
- Addeed NearlyGorensteinVectors
- Added CircuitsOfKernelCongruence, PrimitiveRelationsOfKernelCongruence, IsMinimalRelationOfNumericalSemigroup, AllMinimalRelationsOfNumericalSemigroup
- Added IsAlmostCanonicalIdeal, IsNearlyGorenstein, IsGeneralizedAlmostSymmetric, IsHomogeneousNumericalSemigroup, AsNumericalDuplication, DilatationOfNumericalSemigroup, RFMatrices (by Francesco Strazzanti)