@@ -29,6 +29,7 @@
 - Added difference between numerical semigroups and ideals of numerical semigroups and vice versa
 - Added Position for ideals of numerical semigroups and numerical semigroups
 - Union of numerical semigroups is a numerical set
+- Integer partitions associated to numerical sets and numerical semigroups
 1.3.1 -> 1.4.0
 - Added NumericalSemigroupsWithFrobeniusNumberPC
 - Added NumericalSemigroupsWithGenusPC
